# halocore

./: CMakeLists.txt  LICENSE
include/halocore/: hc_allocator.hpp  hc_bitflags.hpp  hc_cstr.hpp  hc_def.hpp  hc_expected.hpp  hc_hash.hpp  hc_memory.hpp  hc_memory_resource.hpp  hc_overloaded.hpp  hc_source_location.hpp  hc_span.hpp
include/halocore/std/: hc_compare.hpp  hc_concepts.hpp  hc_ranges.hpp  hc_source_location.hpp  hc_type_traits.hpp  hc_utility.hpp
src/: CMakeLists.txt  hc_allocator.cpp  hc_memory.cpp  hc_memory_msvc.cpp  hc_memory_std.cpp
